--- a/app/src/main/res/layout/add_photo.xml
+++ b/app/src/main/res/layout/add_photo.xml
@@ -14,6 +14,8 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
+            app:elevation="0dp"
+            android:translationZ="0.1dp"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent">
 
