--- a/app/src/main/res/layout/image_with_description.xml
+++ b/app/src/main/res/layout/image_with_description.xml
@@ -118,6 +118,7 @@
     </FrameLayout>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/imageView_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
