--- a/app/src/main/res/layout/new_trade_licence_screen.xml
+++ b/app/src/main/res/layout/new_trade_licence_screen.xml
@@ -709,7 +709,7 @@
                                     android:id="@+id/age"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:inputType="textPersonName" />
+                                    android:inputType="number" />
 
                             </com.google.android.material.textfield.TextInputLayout>
 
