--- a/app/src/main/res/layout/tax_collection_tp.xml
+++ b/app/src/main/res/layout/tax_collection_tp.xml
@@ -1,167 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_margin="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:visibility="visible"
-        android:elevation="6dp"
-        app:cardBackgroundColor="#fcfcfc"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-                <TextView
-                    android:textColor="@color/grey2"
-                    android:padding="2dp"
-                    android:textSize="@dimen/_14sdp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/taxName"
-                    android:text="hjsdgsadas"
-                    />
-                <View
-                    android:layout_below="@+id/taxName"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/greylight"></View>
-
-            </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:weightSum="2"
-            android:orientation="horizontal">
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1">
-                <RelativeLayout
-                    android:layout_centerInParent="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:textColor="@color/blue"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/demand_text"
-                        android:text="Demand"
-                        ></TextView>
-                    <TextView
-                        android:textColor="@color/grey2"
-                        android:layout_below="@+id/demand_text"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/demand_amount"
-                        android:text="00.00"
-                        android:textSize="@dimen/_13sdp"
-                        ></TextView>
-                </RelativeLayout>
-
-                <View
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="1.5dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/greylight"></View>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true">
-
-                    <TextView
-                        android:textColor="@color/blue"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/balance_text"
-                        android:text="Balance"
-                        ></TextView>
-                    <TextView
-                        android:textColor="@color/grey2"
-                        android:layout_below="@+id/balance_text"
-                        android:layout_centerHorizontal="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/balance_amount"
-                        android:text="00.00"
-                        android:textSize="@dimen/_13sdp"
-                        ></TextView>
-                </RelativeLayout>
-
-            </RelativeLayout>
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/greylight"></View>
-        <RelativeLayout
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:textColor="@color/blue"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/collection_text"
-                android:text="Collection Amount"
-                ></TextView>
-            <TextView
-                android:textColor="@color/grey2"
-                android:layout_below="@+id/collection_text"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/taxAmount"
-                android:text="00.00"
-                android:textSize="@dimen/_13sdp"
-                ></TextView>
-
-        </RelativeLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
-
-
-
-
-<!--
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
@@ -325,6 +162,162 @@
     </RelativeLayout>
 
 </RelativeLayout>
--->
+<!--<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_margin="5dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"
+        android:elevation="6dp"
+        app:cardBackgroundColor="#fcfcfc"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="6dp"
+        app:cardPreventCornerOverlap="false"
+        app:cardUseCompatPadding="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+                <TextView
+                    android:textColor="@color/grey2"
+                    android:padding="2dp"
+                    android:textSize="@dimen/_14sdp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/taxName"
+                    android:text="hjsdgsadas"
+                    />
+                <View
+                    android:layout_below="@+id/taxName"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/greylight"></View>
+
+            </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:weightSum="2"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+                <RelativeLayout
+                    android:layout_centerInParent="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/blue"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/demand_text"
+                        android:text="Demand"
+                        ></TextView>
+                    <TextView
+                        android:textColor="@color/grey2"
+                        android:layout_below="@+id/demand_text"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/demand_amount"
+                        android:text="00.00"
+                        android:textSize="@dimen/_13sdp"
+                        ></TextView>
+                </RelativeLayout>
+
+                <View
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="1.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/greylight"></View>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true">
+
+                    <TextView
+                        android:textColor="@color/blue"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/balance_text"
+                        android:text="Balance"
+                        ></TextView>
+                    <TextView
+                        android:textColor="@color/grey2"
+                        android:layout_below="@+id/balance_text"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/balance_amount"
+                        android:text="00.00"
+                        android:textSize="@dimen/_13sdp"
+                        ></TextView>
+                </RelativeLayout>
+
+            </RelativeLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/greylight"></View>
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:textColor="@color/blue"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/collection_text"
+                android:text="Collection Amount"
+                ></TextView>
+            <TextView
+                android:textColor="@color/grey2"
+                android:layout_below="@+id/collection_text"
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/taxAmount"
+                android:text="00.00"
+                android:textSize="@dimen/_13sdp"
+                ></TextView>
+
+        </RelativeLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</LinearLayout>-->
 
